--- a/src/pages/category/payment.scss
+++ b/src/pages/category/payment.scss
@@ -41,7 +41,7 @@
     .box{
         margin-top: 4rem;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         gap: 10px;
         @media screen and (max-width: 968px) {
             grid-template-columns: repeat(2, 1fr);
@@ -51,17 +51,18 @@
         }
         .one__box{
             background-color: #3d3d3d;
-            padding: 20px 20px 35px 20px;
+            padding: 20px 10px 35px 10px;
             border-radius: 10px;
+            text-align: center;
             @media screen and (max-width: 350px) {
                 padding: 20px 10px 35px 10px;
             }
             button{
-                padding: 10px 25px;
+                padding: 7px 15px;
                 background: transparent;
                 border: 1px solid gray;
                 color: #fff;
-                font-size: 14px;
+                font-size: 12px;
                 font-weight: bold;
                 letter-spacing: 1px;
                 border-radius: 6px;
@@ -70,6 +71,8 @@
                 gap: 9px;
                 cursor: pointer;
                 transition: .3s ease-in-out;
+                margin-top: 4rem !important;
+                margin: auto;
                 &:hover{
                     background-color: red;
                     border: 1px solid red;
