--- a/src/pages/allServices/allservices.scss
+++ b/src/pages/allServices/allservices.scss
@@ -99,9 +99,15 @@
         }
     }
     .modal{
+        height: 100% !important;
         .modal-dialog{
             .modal-content{
                 background-color: #3d3d3d !important;
+                img{
+                    // width: 570px;
+                    // height: 300px;
+                    // object-fit: cover;
+                }
                 .btn-default{
                     padding: 5px 10px;
                     background: transparent;
