--- a/src/pages/faq/add.scss
+++ b/src/pages/faq/add.scss
@@ -16,9 +16,11 @@ h1 {
         width: 100% !important;
         padding: 20px;
         text-align: center;
+        border-radius: 10px;
 
-        img {
+        video {
             width: 100%;
+            height: 100%;
         }
 
         .details {
