--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -43,7 +43,7 @@
         }
     }
 
-    .box{
+    .box__sub-category{
         margin-top: 4rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
