--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -103,7 +103,7 @@
                 @media screen and (max-width: 500px) {
                     margin-top: 4rem;
                 }
-                input {
+                button {
                     background: none;
                     outline: none;
                     border: none;
