--- a/src/pages/allServices/allservices.scss
+++ b/src/pages/allServices/allservices.scss
@@ -8,7 +8,6 @@
     margin: auto;
     margin-top: 20px;
     @media screen and (max-width: 650px) {
-        // width: 85%;
         height: 35%!important;
         margin-top: 0px!important;
     }
@@ -103,10 +102,26 @@
         .modal-dialog{
             .modal-content{
                 background-color: #3d3d3d !important;
-                img{
-                    // width: 570px;
-                    // height: 300px;
-                    // object-fit: cover;
+                .main{
+                    display: flex;
+                    gap: 10px;
+                    .left{
+                        width: 50%;
+                        text-align: center;
+                        img{
+                            width: 100%;
+                        }
+                    }
+                    .right{
+                        width: 50%;
+                        text-align: center !important;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                        img{
+                            width: 49%;
+                        }
+                    }
                 }
                 .btn-default{
                     padding: 5px 10px;
