--- a/src/pages/subCategory/sub.scss
+++ b/src/pages/subCategory/sub.scss
@@ -56,14 +56,18 @@
         }
         .one__box{
             background-color: #3d3d3d;
-            padding: 20px 20px 35px 20px;
+            padding: 20px 10px 35px 10px;
             border-radius: 10px;
+            text-align: center;
+            @media screen and (max-width: 350px) {
+                padding: 20px 10px 35px 10px;
+            }
             button{
-                padding: 10px 25px;
+                padding: 7px 15px;
                 background: transparent;
                 border: 1px solid gray;
                 color: #fff;
-                font-size: 14px;
+                font-size: 12px;
                 font-weight: bold;
                 letter-spacing: 1px;
                 border-radius: 6px;
@@ -72,6 +76,8 @@
                 gap: 9px;
                 cursor: pointer;
                 transition: .3s ease-in-out;
+                margin-top: 4rem !important;
+                margin: auto;
                 &:hover{
                     background-color: red;
                     border: 1px solid red;
@@ -80,3 +86,4 @@
         }
     }
 }
+
